kubernetes/minio/minio-operator.yaml
apiVersion: v1
kind: Service
metadata:
  name: console
  namespace: minio-operator
  labels:
    ark.ulagbulag.io/is-dt-external: "true"
    ark.ulagbulag.io/test-ip-pool: "true"
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 9090
      protocol: TCP
      targetPort: 9090
    - name: https
      port: 9443
      protocol: TCP
      targetPort: 9443
  selector:
    name: console
