kubernetes/minio/minio.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twin-pond
  namespace: name-twin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: twin-pond
  template:
    metadata:
      labels:
        app: twin-pond
    spec:
      containers:
      - name: twin-pond
        image: minio/minio:latest
        args:
          - server
          - /data
          - --console-address
          - ":9001"
        ports:
          - containerPort: 9000
          - containerPort: 9001
        volumeMounts:
          - name: data
            mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: minio-data-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: twin-pond-service
  namespace: name-twin
  labels:
    ark.ulagbulag.io/is-dt-external: "true"
    ark.ulagbulag.io/test-ip-pool: "true"
spec:
  selector:
    app: twin-pond
  ports:
    - name: api
      port: 9000
      targetPort: 9000
      protocol: TCP
    - name: console
      port: 9001
      targetPort: 9001
      protocol: TCP
  type: LoadBalancer   # 필요에 따라 ClusterIP / LoadBalancer 등으로 변경
